# ROS2_UR_RTDE_Receiver

./: .gitignore  README.md
log/: latest_build
src/rtde_interfaces/: CMakeLists.txt  package.xml
src/rtde_interfaces/msg/: UrRtde.msg
src/ur_rtde_receiver/: package.xml  setup.cfg  setup.py
src/ur_rtde_receiver/ur_rtde_receiver/: rtde_receiver.py
src/ur_rtde_receiver/ur_rtde_receiver/rtde/: csv_binary_writer.py  csv_reader.py  csv_writer.py  rtde.py  rtde_config.py  serialize.py
