<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_rtde_receiver</name>
  <version>0.0.0</version>
  <description>ROS2 Universal Robot RTDE Receiver</description>
  <maintainer email="headwaving@gmail.com">siderdax</maintainer>
  <license>""</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>rtde_interfaces</build_depend>
  <exec_depend>rtde_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
